2007-10-04  Sven Neumann  <sven@gimp.org>

	* plug-ins/jpeg/jpeg-load.c (jpeg_load_cmyk_transform): use the
	display rendering intent as set in the user's color management
	preferences. Use black point compensation if the rendering intent
	is relative colorimetric.

2007-10-03  Sven Neumann  <sven@gimp.org>

	* modules/cdisplay_lcms.c: use black point compensation if the
	rendering intent is relative colorimetric.

	* plug-ins/common/lcms.c: use the display rendering intent as set
	in the user's color management preferences as the default for the
	color conversion. Default to using black point compensation if the
	rendering intent is relative colorimetric (bug #475983).

2007-10-03  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/scripts/perspective-shadow.scm: applied patch
	from Ulf-D. Ehlert that fixes resizing in the Perspective Shadow
	script (bug #482743).

2007-10-02  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/scatter_hsv.c (scatter_hsv_dialog): changed the
	dialog title to adopt to the menu label we changed two years ago.

2007-10-02  Raphaël Quinet  <raphael@gimp.org>

	* plug-ins/metadata/metadata.c
	* plug-ins/metadata/xmp-model.c
	* plug-ins/metadata/xmp-encode.c: replaced calls to g_warning() by
	g_printerr().

2007-10-02  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/oilify.c (get_map_value): clamp values used for
	the exponent map to 1..255. Fixes bug #478618.

2007-10-02  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/scripts/guides-new.scm: Use 'list' to create
	argument list for SF-ADJUSTMENT since it uses a named constant.
	Fixes bug #480799.

2007-10-01  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/scripts/burn-in-anim.scm: use RUN-NONINTERACTIVE
	for the run-mode where 0 was used instead.

2007-10-01  Sven Neumann  <sven@gimp.org>

	* plug-ins/pygimp/plug-ins/Makefile.am: moved shadow_bevel.py to
	test-scripts so that it isn't installed by default (bug #482289).
